--- a/api/server/package.json
+++ b/api/server/package.json
@@ -19,7 +19,9 @@
 		"express": "^4.16.4",
 		"multer": "^1.4.1",
 		"pino": "^5.12.0",
-		"pino-pretty": "^2.6.0"
+		"pino-pretty": "^2.6.0",
+		"pdf2pic": "^1.3.9",
+		"gm": "^1.23.1"
 	},
 	"devDependencies": {
 		"@types/express": "^4.16.1",
