--- a/package.json
+++ b/package.json
@@ -51,37 +51,37 @@
     }
   },
   "dependencies": {
-    "@google-cloud/vision": "^1.3.0",
+    "@google-cloud/vision": "1.9.0",
     "an-array-of-english-words": "^1.3.1",
     "archiver": "^3.1.1",
-    "aws-sdk": "^2.605.0",
-    "axios": "^0.19.0",
+    "aws-sdk": "^2.639.0",
+    "axios": "^0.19.2",
     "clone": "^2.1.2",
     "commander": "^2.20.0",
     "concaveman": "^1.1.1",
     "convert-html-to-pdf": "^1.0.1",
-    "copyfiles": "^2.1.1",
-    "csv-stringify": "^5.3.3",
+    "copyfiles": "^2.2.0",
+    "csv-stringify": "^5.3.6",
     "file-type": "^9.0.0",
     "html-entities": "^1.2.1",
     "limit-async": "^1.3.0",
     "mailparser": "^2.7.7",
     "pdfjs-dist": "^2.2.228",
     "pdfmerge": "^1.0.2",
-    "pino": "^5.13.2",
+    "pino": "^5.17.0",
     "pino-pretty": "^2.6.1",
-    "request": "^2.88.0",
+    "request": "^2.88.2",
     "string-similarity": "^1.2.1",
     "svgson": "^3.1.0",
     "tslint": "^5.19.0",
     "xml-stream": "^0.4.5",
-    "xml2js": "^0.4.19",
-    "xmldom": "^0.1.27"
+    "xml2js": "^0.4.23",
+    "xmldom": "^0.1.31"
   },
   "devDependencies": {
-    "@types/archiver": "^3.0.0",
+    "@types/archiver": "^3.1.0",
     "@types/axios": "^0.14.0",
-    "@types/chai": "^4.2.0",
+    "@types/chai": "^4.2.11",
     "@types/clone": "^0.1.30",
     "@types/commander": "^2.12.2",
     "@types/concaveman": "^1.1.3",
@@ -89,9 +89,9 @@
     "@types/gapi.client.vision": "^1.0.1",
     "@types/html-entities": "^1.2.16",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^10.14.16",
+    "@types/node": "^10.17.17",
     "@types/pdfjs-dist": "^2.1.2",
-    "@types/pino": "^5.8.9",
+    "@types/pino": "^5.17.0",
     "@types/string-similarity": "^3.0.0",
     "@types/xml2js": "^0.4.4",
     "chai": "^4.1.2",
@@ -101,9 +101,9 @@
     "mocha": "^5.2.0",
     "prettier": "^1.18.2",
     "remark-cli": "^7.0.1",
-    "remark-lint-no-dead-urls": "^1.0.1",
+    "remark-lint-no-dead-urls": "^1.0.2",
     "remark-validate-links": "^9.2.0",
     "ts-node": "^7.0.1",
-    "typescript": "^3.5.3"
+    "typescript": "^3.8.3"
   }
 }
