--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "file-type": "^9.0.0",
     "html-entities": "^1.3.1",
     "limit-async": "^1.3.0",
+    "lodash": "^4.17.19",
     "mailparser": "^2.7.7",
     "pdfjs-dist": "2.3.200",
     "pdfmerge": "^1.0.2",
@@ -65,8 +66,10 @@
     "pino-pretty": "^2.6.1",
     "shelljs": "^0.8.4",
     "string-similarity": "^1.2.1",
+    "webpack": "^4.43.0",
     "xml-stream": "^0.4.5",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "yargs-unparser": "^1.6.3"
   },
   "devDependencies": {
     "@types/archiver": "^3.1.0",
@@ -84,7 +87,7 @@
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "chai": "^4.1.2",
-    "eslint": "^7.0.0",
+    "eslint": "^5.16.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -94,7 +97,7 @@
     "husky": "^1.3.1",
     "leche": "^2.3.0",
     "lint-staged": "^10.2.2",
-    "mocha": "^7.1.2",
+    "mocha": "^7.2.0",
     "prettier": "^1.18.2",
     "remark-cli": "^7.0.1",
     "remark-lint-no-dead-urls": "^1.0.2",
