--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "!(docker|test)/*": "eslint"
   },
   "dependencies": {
-    "@google-cloud/vision": "1.11.0",
+    "@google-cloud/vision": "^2.1.2",
     "an-array-of-english-words": "^1.3.1",
     "archiver": "^3.1.1",
     "aws-sdk": "^2.713.0",
